--- a/src/app/heroes-list/heroes-list.component.html
+++ b/src/app/heroes-list/heroes-list.component.html
@@ -1,4 +1,4 @@
-<ul class="heroes">
+<ul class="characters heroes">
   <li *ngFor="let hero of heroes" [class.selected]="selectedHero == hero" (click)="selectHero(hero)"><span
       class="badge">{{ hero.id }}</span> {{ hero.name }} ({{hero.superpower}})
   </li>
