--- a/src/app/vilains-list/vilains-list.component.html
+++ b/src/app/vilains-list/vilains-list.component.html
@@ -1,4 +1,4 @@
-<ul class="vilains">
+<ul class="characters vilains">
   <li *ngFor="let vilain of vilains"><span class="badge">{{ vilain.id }}</span> {{ vilain.name }} ({{vilain.superpower}})</li>
   </ul>
 
