--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+    --hero-color : #607D8B;
+    --vilain-color : #8b606a;
+}
+
+
 blockquote {
     font-size: 3.2em; 
     font-style: italic; 
@@ -15,14 +22,14 @@ blockquote {
 
 
 
-.heroes .vilains {
+.heroes, .vilains {
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
     width: 22em;
 }
 
-.heroes .vilains li {
+.heroes li, .vilains li {
     cursor: pointer;
     position: relative;
     left: 0;
